--- a/UbikeGo/en.lproj/Localizable.strings
+++ b/UbikeGo/en.lproj/Localizable.strings
@@ -15,8 +15,8 @@
 "色盲好讀模式" = "Colorblind Mode" ;
 "在地圖任何一處長按可開啟選單" = "Long press on map to open menu" ;
 "確定" = "Done" ;
-"分鐘" = "mins." ;
-"公尺" = "m." ;
+"分鐘" = "mins" ;
+"公尺" = "m" ;
 "提示" = "提示";
 "某些語言設定將在重新啟動app之後生效" = "某些語言設定將在重新啟動app之後生效";
 "確認" = "確定";
